Project ShareIt v0.4.2
refactor: оптимизировать метод approveBookingByOwner класса gateway/BookingClient, передавая значение параметра запроса напрямую в метод patch();
delete: удалить зависимость spring-boot-starter-validation из server/pom.xml;
delete: удалить валидацию и статус CANCELED из enum server/BookingStatus;
delete: удалить валидации в контроллерах и моделях данных модуля server;
refactor: переместить тесты контроллеров с негативными сценариями в модуль gateway;